--- a/src/components/SectionTitle.css
+++ b/src/components/SectionTitle.css
@@ -1,10 +1,10 @@
 /* src/components/SectionTitle.css */
 
 .section-title-container {
-  height: 100vh;
+  height: 200vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   text-align: center;
 }
